--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/forms": "~8.2.5",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
+    "@angular/pwa": "^0.1000.5",
     "@angular/router": "~8.2.5",
-    "ngx-quill": "^12.0.1",
+    "@angular/service-worker": "~8.2.5",
+    "ngx-quill": "^5.2.0",
     "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
